--- a/pages/enterReview/enterReview.wxss
+++ b/pages/enterReview/enterReview.wxss
@@ -48,10 +48,9 @@
 }
 
 /* 上传图片框 样式 */
-.upload-img {
+/* .upload-img {
   width: 276rpx;
   height: 190rpx;
-  /* padding: 22rpx 76rpx; */
   background-color: #fafafa;
   border-radius: 3px;
   color: #d5d5d5;
@@ -67,7 +66,7 @@
   width: 100%;
   height: 100%;
   z-index: 1;
-}
+} */
 
 /* 下拉选择框 */
 .select-box {
