--- a/app.wxss
+++ b/app.wxss
@@ -1,7 +1,7 @@
 /**app.wxss**/
 
 /* 字体图标 */
-@import "style/iconfont/iconfont.wxss";
+@import "style/iconfont.wxss";
 
 view, text, icon, input {
   box-sizing: border-box;
